# DPKS

./: .gitignore  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  search.html  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
contributing/: index.html
docs/: Makefile  conf.py  contributing.md  examples.md  index.md  index.rst  installation.rst  make.bat  modules.rst  usage.rst
dpks/: __init__.py  annotate_proteins.py  annotation.py  classification.py  cli.py  cluster.py  clustering.py  correction.py  denoise.py  differential_testing.py  fdr.py  feature_ranking.py  feature_selection.py  imputer.py  inspection.py  interpret.py  interpretation.py  normalization.py  param_search.py  parsers.py  plot.py  quant_matrix.py  quantification.py  scaling.py
examples/: index.html
gui/: file_upload.py  main.py  run.py
notebooks/: batch_correct.ipynb  classifier.ipynb  cluster_features.ipynb  differential_expression.ipynb  enrich_api.ipynb  explain_api.ipynb  fdr.ipynb  feature_network.ipynb  importance_comparison.ipynb  importance_comparison_simulated_data.ipynb  importance_comparison_simulated_data_multicollinearity.ipynb  importance_comparison_simulated_data_multicollinearity_gbm.ipynb  importance_comparison_simulated_data_xgboost.ipynb  normalize.ipynb  plot.ipynb  quant_matrix.ipynb  rt_sliding_window_normalization.ipynb  simulate_proteomics_data.ipynb  simulate_proteomics_data_sklearn.ipynb  simulated_data_creation.ipynb  (+1 more)
(+45 files in other folders)
